style(client): format service classes